# shim-format

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: build.yml  clippy.yml  publish.yml
src/: deserializing.rs  lib.rs  parsing.rs  serializing.rs
tests/: external.rs
