[package]
description = "A simple parser and serializer for Scoop shims"
edition = "2021"
include = ["src", "README.md", "LICENSE", "tests"]
license = "Apache-2.0"
name = "scoop-shim"
repository = "https://github.com/winpax/scoop-shim/tree/trunk"
rust-version = "1.65.0"
version = "0.1.1"

[dependencies]
cfg-if = { version = "1.0.0", features = ["core"] }
thiserror = "2.0"

[features]
default = ["std", "serializing", "deserializing"]
deserializing = []
serializing = []
std = []
